--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-weight: 400;
 }
 
 body {
@@ -11,6 +12,15 @@ body {
 h1,
 h3 {
   font-family: "DM Serif Display", serif;
+}
+
+h1 {
+  font-size: 2.3rem;
+}
+
+p {
+  color: $dark-grayish-violet;
+  line-height: 1.3rem;
 }
 
 a {
