--- a/src/assets/scss/_feature.scss
+++ b/src/assets/scss/_feature.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 8rem 0;
+  margin: 6rem 0 4rem 0;
   padding: 0 1rem;
   text-align: center;
 
