adjusting footer bg pattern image size and position

--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -2,7 +2,8 @@
   background-color: hsl(0, 0%, 98%);
   background-image: url("../images/bg-pattern-footer-mobile.svg");
   background-repeat: no-repeat;
-  background-position: top left;
+  background-position: 0% -15%;
+  background-size: 400px 270px;
   text-align: center;
   padding: 5rem 2rem;
 
