--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -6,12 +6,14 @@
     padding: 1rem;
   }
 
-  &__close-menu {
-    display: none;
-  }
-
   &__nav {
-    display: none;
+    position: absolute;
+    top: 65px;
+    right: 0;
+    left: 150%;
+    bottom: 0;
+    overflow: hidden;
+    transition: left 0.5s ease-in-out;
 
     ul li a {
       text-transform: uppercase;
@@ -27,12 +29,9 @@
       padding: 1rem 0rem;
     }
 
-    &__hamburger-icon {
-      display: none;
-    }
-
     &__nav {
       display: block;
+      position: unset;
 
       ul {
         display: flex;
