--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -7,13 +7,18 @@
   }
 
   &__nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     position: absolute;
-    top: 65px;
+    top: 64px;
     right: 0;
     left: 150%;
     bottom: 0;
+    z-index: 10;
+    text-align: center;
     overflow: hidden;
-    transition: left 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
 
     ul li a {
       text-transform: uppercase;
