--- a/src/assets/scss/_mobile-nav.scss
+++ b/src/assets/scss/_mobile-nav.scss
@@ -11,7 +11,7 @@
 
     &__nav-show {
       left: 0;
-      background: hsl(270, 9%, 17%);
+      background-color: hsl(270, 9%, 17%);
       background-image: url("../images/bg-pattern-mobile-nav.svg");
       background-repeat: no-repeat;
       background-position: bottom;
